# cpptables

./: .gitignore  CMakeLists.txt  coverage.sh
include/: cpptables.hpp
include/details/: basic_types.hpp  basic_view.hpp  compact_indirect_table.hpp  constants.hpp  packed_table_with_indirection.hpp  podvector.hpp  sorted_view.hpp  sparse_direct_table.hpp  sparse_table_of_pointers.hpp  sparse_table_with_backref.hpp  sparse_table_with_no_iter.hpp  sparse_table_with_sortedfree.hpp  sparse_table_with_validmap.hpp  storage_with_backref.hpp  table_type.hpp  table_types.hpp
unit_tests/: CMakeLists.txt  general_test.cpp  validation.cpp
unit_tests/validity/: main.cpp  validation.cpp
